--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -47,8 +47,6 @@
                     <li><a class="" href="{% url 'board:cc_materialcost_if' %}">재료비 I/F</a></li>
                     <li><a class="" href="{% url 'board:cc_itempermanucost_if' %}">품목별 제조비용 I/F</a></li>
                     <li><a class="" href="{% url 'board:cc_productcostpayment_if' %}">제품원가수불 I/F</a></li>
-                    <li><a class="" href="{% url 'board:cc_costbill_if' %}">원가 I/F</a></li>
-                    <li><a class=""  >원가 계산</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
@@ -58,7 +56,7 @@
                     <span class="menu-arrow arrow_carrot-right"></span>
                 </a>
                 <ul class="sub">
-                    <li><a class=""  href="{% url 'board:cc_costbill1_if' %}">원가 예측</a></li>
+                    <li><a class=""  href="{% url 'board:cc_costbill1_if' %}">원가 계산서</a></li>
                     <li><a class=""  href="{% url 'board:chart_if' %}">원가 차트</a></li>
                     <li><a class=""  href="{% url 'board:chart1' %}">차트1</a></li>
                     <li><a class=""  href="{% url 'board:chart2' %}">차트2</a></li>
